fix link to agenda, fix overflow de agenda

--- a/src/components/AgendaDogs/agendaDogs.css
+++ b/src/components/AgendaDogs/agendaDogs.css
@@ -11,7 +11,7 @@
 }
 .table-Agenda{
     max-width: 98dvw;
-    overflow-x: scroll !important;
+    overflow-x: auto !important;
 }
 th, td {
     border: 1px solid black;
